--- a/MovieManagement/Views/Movies/Delete.cshtml
+++ b/MovieManagement/Views/Movies/Delete.cshtml
@@ -35,6 +35,12 @@
         <dd>
             @Html.DisplayFor(model => model.MoviePath)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.MovieCoverImage)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.MovieCoverImage)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
