--- a/MovieManagement/Views/Shared/Error.cshtml
+++ b/MovieManagement/Views/Shared/Error.cshtml
@@ -6,6 +6,10 @@
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
+<h1>@ViewBag.ErrorMessage</h1>
+
+<a asp-action="index" asp-controller="movies">Click here to navigate to home page</a>
+
 @if (Model.ShowRequestId)
 {
     <p>
