--- a/MovieManagement/Views/_ViewImports.cshtml
+++ b/MovieManagement/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using MovieManagement
 @using MovieManagement.Models
+@using MovieManagement.ViewModels
+@using Microsoft.AspNetCore.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
