--- a/MovieManagement/Views/Home/About.cshtml
+++ b/MovieManagement/Views/Home/About.cshtml
@@ -2,6 +2,12 @@
     ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<h3> Proiect Tehnici Avansate De Programare</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>
+    Butnaru Gheorghita<br />
+    Grupa M532<br />
+    Facultatea de Matematica
+</p>
+
+<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
