--- a/MovieManagement/Views/Account/Login.cshtml
+++ b/MovieManagement/Views/Account/Login.cshtml
@@ -3,31 +3,44 @@
     ViewData["Title"] = "Login";
 }
 
-<h2>Login</h2>
-
-<div class="row">
-    <div class="col-md-12">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <div class="checkbox">
-                    <label asp-for="RememberMe">
-                        <input asp-for="RememberMe" />
-                        @Html.DisplayNameFor(m=>m.RememberMe)
-                     </label>
+<body style="background-image:url('/images/bg-lr.jpg')">
+    <h2>Login</h2>
+    <div class="row">
+        <div class="col-md-5">
+            <form method="post">
+                <div class="form-group">
+                    <div asp-validation-summary="All" style="color:#ff3333;"></div>
+                    <div class="form-group">
+                        <label asp-for="Email"></label>
+                        <input asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email" style="color:#ff3333;" ></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Password"></label>
+                        <input asp-for="Password" class="form-control" />
+                        <span asp-validation-for="Password" style="color:#ff3333;"></span>
+                    </div>
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label asp-for="RememberMe">
+                                <input asp-for="RememberMe" />
+                                @Html.DisplayNameFor(m => m.RememberMe)
+                            </label>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Login</button>
                 </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Login</button>
-        </form>
+            </form>
+        </div>
     </div>
-</div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+</body>
