--- a/MovieManagement/Views/Movies/Index.cshtml
+++ b/MovieManagement/Views/Movies/Index.cshtml
@@ -5,22 +5,25 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Movie List</h2>
 @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin"))
 {
+    <br/>
     <p>
-        <a asp-action="Create" class="btn btn-primary">Add New Movie</a>
+        <a asp-action="AddMovie" class="btn btn-primary">Add New Movie</a>
     </p>
 }
-
+    <br />
 <form asp-controller="Movies" asp-action="Index" method="get">
     <p>
-        Genre:
-        <select asp-for="MovieGenre" asp-items="Model.Genres">
+        <text>Genre:</text>
+        <select asp-for="MovieGenre" asp-items="Model.Genres" style="background-color: blue!important">
             <option value="">All</option>
         </select>
-        Title: <input type="text" name="SearchString">
-        <input type="submit" value="Search" />
+        <text>
+            Title:
+        </text>
+        <input type="text" name="SearchString" style="background-color: blue!important"/>
+        <input type="submit" value="Search" class="btn btn-primary" />
     </p>
 </form>
 <br />
@@ -37,12 +40,12 @@
             <div class="col-sm-4">
                 <div class="card-columns-fluid">
                     <div class="card mb-3" style="min-width: 18rem;">
-                        <img class="card-img-top" src="~/images/@Html.DisplayFor(modelItem => item.MovieCoverImage)" width="300" height="300" alt="Card image cap" />
+                        <img class="card-img-top" src="~/images/@Html.DisplayFor(modelItem => item.MovieCoverImage)" width="300" height="300" alt="Movie cover image"/>
                         <div class="card-block">
                             <h5 class="card-title">
-                                <b>@Html.DisplayFor(modelItem => item.MovieTitle)</b>
+                                <b style="color:#00ccff">@Html.DisplayFor(modelItem => item.MovieTitle)</b>
                             </h5>
-                            <p class="card-text">
+                            <p class="card-text" style="color:#00ccff">
                                 Release Year: @Html.DisplayFor(modelItem => item.MovieYear)
                                 <br />
                                 Movie Language: @Html.DisplayFor(modelItem => item.MovieLanguage)
