--- a/MovieManagement/Views/Shared/_Layout.cshtml
+++ b/MovieManagement/Views/Shared/_Layout.cshtml
@@ -6,6 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - MovieManagement</title>
 
+    <style>
+        .body-content{
+            color: aqua;
+        }
+        /* Modify the background color */
+
+        .navbar-custom {
+            background-color: #2ABC73;
+            font-size:inherit;
+            
+        }
+            /* Modify brand and text color */
+
+            .navbar-custom .navbar-brand,
+            .navbar-custom .navbar-text {
+            color: #E0E0A4;
+            }
+    </style>
+
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
@@ -18,7 +37,9 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+
+
+    <nav class="navbar navbar-custom navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -29,47 +50,61 @@
                 </button>
                 <a asp-area="" asp-controller="Movies" asp-action="Index" class="navbar-brand">MovieManagement</a>
             </div>
-            
+
             <div class="collapse navbar-collapse justify-content-between">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="Movies" asp-action="Index">Movies</a></li>
+                    <li><a asp-area="" asp-controller="Movies" asp-action="Index" style="color:#E0E0A4">Movies</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact" style="color:#E0E0A4">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="About" style="color:#E0E0A4">About</a></li>
+
                     @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin"))
                     {
-                        <li><a asp-area="" asp-controller="Administration" asp-action="ListRoles">Manage Roles</a></li>
+                        <li><a asp-area="" asp-controller="Movies" asp-action="AddMovie" style="color:#E0E0A4">Add Movie</a></li>
+                        <li><a asp-area="" asp-controller="Administration" asp-action="ListRoles" style="color:#E0E0A4">Manage Roles</a></li>
                     }
                 </ul>
-                <ul class="nav navbar-nav ml-auto">
+                <ul class="nav navbar-nav navbar-right">
                     @if (signInManager.IsSignedIn(User))
                     {
+
+                        //<li><a asp-area="" asp-controller="account" asp-action="logout">Logout @User.Identity.Name</a></li>
+
                         <li>
                             <form method="post" asp-action="logout" asp-controller="account">
-                                <button type="submit" class="navbar-link btn btn-link py-0" style="width:auto">
-                                    Logout @User.Identity.Name
+                                <button type="submit" class="navbar-link btn btn-link py-5" style="width:auto">
+                                    <text style="color:#E0E0A4">Logout @User.Identity.Name </text>
                                 </button>
                             </form>
                         </li>
                     }
                     else
                     {
-                        <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
-                        <li><a asp-area="" asp-controller="Account" asp-action="Login">Login</a></li>
+                        <li class="nav-item"><a asp-area="" asp-controller="Account" asp-action="Register" style="color:#E0E0A4">Register</a></li>
+                        <li class="nav-item"><a asp-area="" asp-controller="Account" asp-action="Login" style="color:#E0E0A4">Login</a></li>
                     }
-
                 </ul>
             </div>
+
         </div>
     </nav>
 
-    <partial name="_CookieConsentPartial" />
+    <style>
+        body {
+            background-image:url('/images/bg.jpg');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+            background-color: white;
+        }
+    </style>
+    
 
+    <partial name="_CookieConsentPartial" />
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2020 - MovieManagement</p>
+            <p style="text-align:center; color:white">&copy;2020 - Movie Management</p>
         </footer>
     </div>
 
